--- a/less/footer.less
+++ b/less/footer.less
@@ -2,7 +2,7 @@
 .footer-mobile() {
   color: #22283B;
   background: #f4f4f4;
-  padding: 5rem 0;
+  padding: 2rem 0;
   border: 1px double #e0e0e0;
   border-radius: 1rem;
   display: flex;
@@ -10,7 +10,7 @@
   align-items: center;
   margin-top: 5rem;
   p {
-    font-size: 3rem;
+    font-size: 2rem;
   }
   
 }
