--- a/less/mixins.less
+++ b/less/mixins.less
@@ -13,7 +13,7 @@
     img {
         width: 100%;
         height: 100%;
-        border-radius: 5rem;
+        border-radius: 2.5rem;
     }
 }
 .mobile-text-content() {
