--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,13 +2,13 @@
 
 .nav-bar-mobile() {
     width: 100%;
-    margin: 3.3rem 0;
-    padding: 0 15rem;
+    margin: 3.3rem 0rem;
+    padding: 0 1rem;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     .nav-item {
         .link-style();
-        font-size: 3.2rem;
+        font-size: 1.6rem;
     }
 }
 .nav-bar-desktop() {
